<resources>
    <string name="app_name">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">Login</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="welcome">Welcome to Coursedy</string>
</resources>