<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#00030E">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="50sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textSize="25sp"
        android:textColorHint="#ADFFFFFF"
        android:background="@drawable/edittextback"
        android:layout_marginBottom="10sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:textSize="25sp"
        android:textColorHint="#ADFFFFFF"
        android:background="@drawable/edittextback"
        android:layout_marginBottom="10sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/email"
        android:hint="@string/email_id"
        android:textSize="25sp"
        android:textColorHint="#ADFFFFFF"
        android:background="@drawable/edittextback"
        android:layout_marginBottom="10sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:textColorHint="#ADFFFFFF"
        android:background="@drawable/edittextback"
        android:layout_marginBottom="10sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/confirmpassword"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:textColorHint="#ADFFFFFF"
        android:background="@drawable/edittextback"
        android:layout_marginBottom="10sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/buttonback"
        android:backgroundTint="#02A2B6"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/signin1"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="#0000B0F0"
        android:layout_marginBottom="30sp"/>

</LinearLayout>